# meshcore-dashboard

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tox.ini
.github/actions/setup-python-env/: action.yml
.github/workflows/: deploy.yml  main.yml
.superpowers/brainstorm/23870-1776767799/content/: 01-approach.html  02-dashboard-layout.html  03-other-pages.html
.superpowers/brainstorm/23870-1776767799/state/: server-stopped
docs/superpowers/specs/: 2026-04-20-meshcore-repeater-dashboard-design.md  2026-04-21-frontend-overhaul-design.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/hooks/: usePageVisibility.ts  useWebSocket.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: Config.tsx  Dashboard.tsx  Logs.tsx  Neighbors.tsx
meshcore_dashboard/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
meshcore_dashboard/middleware/: auth.py  readonly.py
meshcore_dashboard/routers/: commands.py  config.py  logs.py  neighbors.py  stats.py  status.py  websocket.py
meshcore_dashboard/serial/: commands.py  connection.py  parser.py
meshcore_dashboard/services/: log_collector.py  poller.py  retention.py
scripts/: install-backup-timer.sh  install.sh  migrate_packet_logs.py
tests/: conftest.py  test_auth.py  test_commands.py  test_config.py  test_connection.py  test_foo.py  test_log_collector.py  test_models.py  test_parser.py  test_poller_logs.py  test_poller_stale.py  test_readonly.py  test_stats.py  test_status.py
