[project]
name = "meshcore-dashboard"
version = "0.1.0"
description = "Web dashboard for MeshCore repeater management"
authors = [{ name = "matt" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pyserial>=3.5",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "anyio[trio]>=4.0.0",
    "pytest-anyio>=0.0.0",
    "httpx>=0.27.0",
    "pre-commit>=4.5.0",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
    "tox-uv>=1.33.4",
    "build>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meshcore_dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "UP", "B", "SIM", "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.pyright]
include = ["meshcore_dashboard"]
pythonVersion = "3.12"
